<resources>

    <string name="app_name">KDroid Calculator and Unit Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="default_number">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="memory_clear">MC</string>
    <string name="memory_recall">MR</string>
    <string name="memory_store">MS</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="square">&#8730;</string>
    <string name="percent">x%Y</string>
    <string name="power_of_two">X<sup>2</sup></string>
    <string name="power_of_x">Y<sup>x</sup></string>
    <string name="square_var"><sup>x</sup>&#8730;Y</string>
    <string name="delete">DEL</string>
    <string name="ac">AC</string>
    <string name="shift">Shift</string>
    <string name="multiplication">&#215;</string>
    <string name="division">&#247;</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="pos_neg">&#177;</string>
    <string name="dot">.</string>
    <string name="exponent">EXP</string>
    <string name="equals">=</string>
    <string name="tangens">tan</string>
    <string name="cosinus">cos</string>
    <string name="sinus">sin</string>
    <string name="lan">ln</string>
    <string name="logarithm">log</string>
    <string name="PI">&#928;</string>
    <string name="e">e</string>
    <string name="uc_category">Category</string>
    <string name="uc_from">From</string>
    <string name="uc_to">To</string>
    <string name="uc_convert">CONVERT</string>

</resources>