<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/main_background"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/categoryText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:paddingTop="10dp"
		android:text="@string/uc_category"
		android:textColor="@android:color/white"
		android:textSize="20sp"
		android:textStyle="bold" />

	<Spinner
		android:id="@+id/categorySpinner"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="5dp" />

	<TextView
		android:id="@+id/fromText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingTop="10dp"
		android:text="@string/uc_from"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:textStyle="bold" />

	<Spinner
		android:id="@+id/fromSpinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_marginTop="5dp"
		android:minWidth="200dp" />

	<EditText
		android:id="@+id/fromEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="7dp"
		android:layout_marginRight="7dp"
		android:layout_marginTop="5dp"
		android:ems="10"
		android:inputType="numberDecimal" >

		<requestFocus />
	</EditText>

	<ImageButton
		android:id="@+id/changeButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:src="@drawable/clear_buttons_background" />

	<TextView
		android:id="@+id/toText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingTop="10dp"
		android:text="@string/uc_to"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:textStyle="bold" />

	<Spinner
		android:id="@+id/toSpinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_marginTop="5dp"
		android:minWidth="200dp" />

	<EditText
		android:id="@+id/toEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="7dp"
		android:layout_marginRight="7dp"
		android:layout_marginTop="5dp"
		android:ems="10"
		android:inputType="numberDecimal" />

	<Button
		android:id="@+id/converButton"
		android:layout_width="100dp"
		android:layout_height="50dp"
		android:layout_gravity="center_horizontal"
		android:background="@drawable/shift_buttons_background"
		android:text="@string/uc_convert"
		android:textColor="@android:color/white"
		android:textSize="17sp"
		android:textStyle="bold" />

</LinearLayout>